--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
 server:
   port: 8080
