--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,24 @@
 version: '3'
 
 services:
-  database:
-    image: postgres
+  mysql-database:
+    image: mysql:8
+    container_name: mysql
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      POSTGRES_PASSWORD: test
-      POSTGRES_DB: gestaoprodutos
+      MYSQL_USER: api
+      MYSQL_PASSWORD: 3opijdf2@!ad
+      MYSQL_ROOT_PASSWORD: 3opijdf2@!ad
+    ports:
+      - "3306:3307"
     volumes:
-      - db-volume:/var/lib/postgresql/data
+      - .var/data:/var/lib/mysql
 
   api:
     image: herik-lorencao/gestao-produtos
     environment:
-      DB_HOST: database
+      DB_HOST: mysql-database
     ports:
-      - "8080:8080"
+      - "10000:10000"
 volumes:
   db-volume:
